test-specsheets/generated/cpp/src/antlr/mathParser.cpp

// Generated from math.g4 by ANTLR 4.13.2


#include "mathVisitor.h"

#include "mathParser.h"


using namespace antlrcpp;
using namespace sed2test::antlr;

using namespace antlr4;

namespace {

struct MathParserStaticData final {
  MathParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MathParserStaticData(const MathParserStaticData&) = delete;
  MathParserStaticData(MathParserStaticData&&) = delete;
  MathParserStaticData& operator=(const MathParserStaticData&) = delete;
  MathParserStaticData& operator=(MathParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mathParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MathParserStaticData> mathParserStaticData = nullptr;

void mathParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mathParserStaticData != nullptr) {
    return;
  }
#else
  assert(mathParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MathParserStaticData>(
    std::vector<std::string>{
      "start", "expr", "logical", "relational", "relop", "additive", "multiplicative", 
      "unary", "power", "atom", "arglist"
    },
    std::vector<std::string>{
      "", "'&&'", "'||'", "'=='", "'!='", "", "'<='", "'>='", "'<'", "'>'", 
      "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'^'", "'('", "')'", "'['", 
      "']'", "','"
    },
    std::vector<std::string>{
      "", "AND", "OR", "EQ", "NEQ", "NE_ALT", "LE", "GE", "LT", "GT", "PLUS", 
      "MINUS", "STAR", "SLASH", "PERCENT", "BANG", "CARET", "LPAREN", "RPAREN", 
      "LBRACK", "RBRACK", "COMMA", "NUMBER", "REFERENCE", "IDENTIFIER", 
      "WS", "ERRCHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mathParserStaticData = std::move(staticData);
}

}

mathParser::mathParser(TokenStream *input) : mathParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

mathParser::mathParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  mathParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mathParserStaticData->atn, mathParserStaticData->decisionToDFA, mathParserStaticData->sharedContextCache, options);
}

mathParser::~mathParser() {
  delete _interpreter;
}

const atn::ATN& mathParser::getATN() const {
  return *mathParserStaticData->atn;
}

std::string mathParser::getGrammarFileName() const {
  return "math.g4";
}

const std::vector<std::string>& mathParser::getRuleNames() const {
  return mathParserStaticData->ruleNames;
}

const dfa::Vocabulary& mathParser::getVocabulary() const {
  return mathParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView mathParser::getSerializedATN() const {
  return mathParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

mathParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mathParser::ExprContext* mathParser::StartContext::expr() {
  return getRuleContext<mathParser::ExprContext>(0);
}

tree::TerminalNode* mathParser::StartContext::EOF() {
  return getToken(mathParser::EOF, 0);
}


size_t mathParser::StartContext::getRuleIndex() const {
  return mathParser::RuleStart;
}


std::any mathParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

mathParser::StartContext* mathParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, mathParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22);
    expr();
    setState(23);
    match(mathParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

mathParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mathParser::LogicalContext* mathParser::ExprContext::logical() {
  return getRuleContext<mathParser::LogicalContext>(0);
}


size_t mathParser::ExprContext::getRuleIndex() const {
  return mathParser::RuleExpr;
}


std::any mathParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

mathParser::ExprContext* mathParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 2, mathParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    logical();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalContext ------------------------------------------------------------------

mathParser::LogicalContext::LogicalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<mathParser::RelationalContext *> mathParser::LogicalContext::relational() {
  return getRuleContexts<mathParser::RelationalContext>();
}

mathParser::RelationalContext* mathParser::LogicalContext::relational(size_t i) {
  return getRuleContext<mathParser::RelationalContext>(i);
}

std::vector<tree::TerminalNode *> mathParser::LogicalContext::AND() {
  return getTokens(mathParser::AND);
}

tree::TerminalNode* mathParser::LogicalContext::AND(size_t i) {
  return getToken(mathParser::AND, i);
}

std::vector<tree::TerminalNode *> mathParser::LogicalContext::OR() {
  return getTokens(mathParser::OR);
}

tree::TerminalNode* mathParser::LogicalContext::OR(size_t i) {
  return getToken(mathParser::OR, i);
}


size_t mathParser::LogicalContext::getRuleIndex() const {
  return mathParser::RuleLogical;
}


std::any mathParser::LogicalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitLogical(this);
  else
    return visitor->visitChildren(this);
}

mathParser::LogicalContext* mathParser::logical() {
  LogicalContext *_localctx = _tracker.createInstance<LogicalContext>(_ctx, getState());
  enterRule(_localctx, 4, mathParser::RuleLogical);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    relational();
    setState(32);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mathParser::AND

    || _la == mathParser::OR) {
      setState(28);
      _la = _input->LA(1);
      if (!(_la == mathParser::AND

      || _la == mathParser::OR)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(29);
      relational();
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelationalContext ------------------------------------------------------------------

mathParser::RelationalContext::RelationalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<mathParser::AdditiveContext *> mathParser::RelationalContext::additive() {
  return getRuleContexts<mathParser::AdditiveContext>();
}

mathParser::AdditiveContext* mathParser::RelationalContext::additive(size_t i) {
  return getRuleContext<mathParser::AdditiveContext>(i);
}

std::vector<mathParser::RelopContext *> mathParser::RelationalContext::relop() {
  return getRuleContexts<mathParser::RelopContext>();
}

mathParser::RelopContext* mathParser::RelationalContext::relop(size_t i) {
  return getRuleContext<mathParser::RelopContext>(i);
}


size_t mathParser::RelationalContext::getRuleIndex() const {
  return mathParser::RuleRelational;
}


std::any mathParser::RelationalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitRelational(this);
  else
    return visitor->visitChildren(this);
}

mathParser::RelationalContext* mathParser::relational() {
  RelationalContext *_localctx = _tracker.createInstance<RelationalContext>(_ctx, getState());
  enterRule(_localctx, 6, mathParser::RuleRelational);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    additive();
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1016) != 0)) {
      setState(36);
      relop();
      setState(37);
      additive();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelopContext ------------------------------------------------------------------

mathParser::RelopContext::RelopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mathParser::RelopContext::EQ() {
  return getToken(mathParser::EQ, 0);
}

tree::TerminalNode* mathParser::RelopContext::NEQ() {
  return getToken(mathParser::NEQ, 0);
}

tree::TerminalNode* mathParser::RelopContext::NE_ALT() {
  return getToken(mathParser::NE_ALT, 0);
}

tree::TerminalNode* mathParser::RelopContext::LE() {
  return getToken(mathParser::LE, 0);
}

tree::TerminalNode* mathParser::RelopContext::GE() {
  return getToken(mathParser::GE, 0);
}

tree::TerminalNode* mathParser::RelopContext::LT() {
  return getToken(mathParser::LT, 0);
}

tree::TerminalNode* mathParser::RelopContext::GT() {
  return getToken(mathParser::GT, 0);
}


size_t mathParser::RelopContext::getRuleIndex() const {
  return mathParser::RuleRelop;
}


std::any mathParser::RelopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitRelop(this);
  else
    return visitor->visitChildren(this);
}

mathParser::RelopContext* mathParser::relop() {
  RelopContext *_localctx = _tracker.createInstance<RelopContext>(_ctx, getState());
  enterRule(_localctx, 8, mathParser::RuleRelop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1016) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdditiveContext ------------------------------------------------------------------

mathParser::AdditiveContext::AdditiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<mathParser::MultiplicativeContext *> mathParser::AdditiveContext::multiplicative() {
  return getRuleContexts<mathParser::MultiplicativeContext>();
}

mathParser::MultiplicativeContext* mathParser::AdditiveContext::multiplicative(size_t i) {
  return getRuleContext<mathParser::MultiplicativeContext>(i);
}

std::vector<tree::TerminalNode *> mathParser::AdditiveContext::PLUS() {
  return getTokens(mathParser::PLUS);
}

tree::TerminalNode* mathParser::AdditiveContext::PLUS(size_t i) {
  return getToken(mathParser::PLUS, i);
}

std::vector<tree::TerminalNode *> mathParser::AdditiveContext::MINUS() {
  return getTokens(mathParser::MINUS);
}

tree::TerminalNode* mathParser::AdditiveContext::MINUS(size_t i) {
  return getToken(mathParser::MINUS, i);
}


size_t mathParser::AdditiveContext::getRuleIndex() const {
  return mathParser::RuleAdditive;
}


std::any mathParser::AdditiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitAdditive(this);
  else
    return visitor->visitChildren(this);
}

mathParser::AdditiveContext* mathParser::additive() {
  AdditiveContext *_localctx = _tracker.createInstance<AdditiveContext>(_ctx, getState());
  enterRule(_localctx, 10, mathParser::RuleAdditive);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    multiplicative();
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mathParser::PLUS

    || _la == mathParser::MINUS) {
      setState(47);
      _la = _input->LA(1);
      if (!(_la == mathParser::PLUS

      || _la == mathParser::MINUS)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(48);
      multiplicative();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeContext ------------------------------------------------------------------

mathParser::MultiplicativeContext::MultiplicativeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<mathParser::UnaryContext *> mathParser::MultiplicativeContext::unary() {
  return getRuleContexts<mathParser::UnaryContext>();
}

mathParser::UnaryContext* mathParser::MultiplicativeContext::unary(size_t i) {
  return getRuleContext<mathParser::UnaryContext>(i);
}

std::vector<tree::TerminalNode *> mathParser::MultiplicativeContext::STAR() {
  return getTokens(mathParser::STAR);
}

tree::TerminalNode* mathParser::MultiplicativeContext::STAR(size_t i) {
  return getToken(mathParser::STAR, i);
}

std::vector<tree::TerminalNode *> mathParser::MultiplicativeContext::SLASH() {
  return getTokens(mathParser::SLASH);
}

tree::TerminalNode* mathParser::MultiplicativeContext::SLASH(size_t i) {
  return getToken(mathParser::SLASH, i);
}

std::vector<tree::TerminalNode *> mathParser::MultiplicativeContext::PERCENT() {
  return getTokens(mathParser::PERCENT);
}

tree::TerminalNode* mathParser::MultiplicativeContext::PERCENT(size_t i) {
  return getToken(mathParser::PERCENT, i);
}


size_t mathParser::MultiplicativeContext::getRuleIndex() const {
  return mathParser::RuleMultiplicative;
}


std::any mathParser::MultiplicativeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitMultiplicative(this);
  else
    return visitor->visitChildren(this);
}

mathParser::MultiplicativeContext* mathParser::multiplicative() {
  MultiplicativeContext *_localctx = _tracker.createInstance<MultiplicativeContext>(_ctx, getState());
  enterRule(_localctx, 12, mathParser::RuleMultiplicative);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    unary();
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 28672) != 0)) {
      setState(55);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 28672) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(56);
      unary();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryContext ------------------------------------------------------------------

mathParser::UnaryContext::UnaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mathParser::UnaryContext::getRuleIndex() const {
  return mathParser::RuleUnary;
}

void mathParser::UnaryContext::copyFrom(UnaryContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnaryPowerContext ------------------------------------------------------------------

mathParser::PowerContext* mathParser::UnaryPowerContext::power() {
  return getRuleContext<mathParser::PowerContext>(0);
}

mathParser::UnaryPowerContext::UnaryPowerContext(UnaryContext *ctx) { copyFrom(ctx); }


std::any mathParser::UnaryPowerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitUnaryPower(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnaryOpContext ------------------------------------------------------------------

mathParser::UnaryContext* mathParser::UnaryOpContext::unary() {
  return getRuleContext<mathParser::UnaryContext>(0);
}

tree::TerminalNode* mathParser::UnaryOpContext::MINUS() {
  return getToken(mathParser::MINUS, 0);
}

tree::TerminalNode* mathParser::UnaryOpContext::PLUS() {
  return getToken(mathParser::PLUS, 0);
}

tree::TerminalNode* mathParser::UnaryOpContext::BANG() {
  return getToken(mathParser::BANG, 0);
}

mathParser::UnaryOpContext::UnaryOpContext(UnaryContext *ctx) { copyFrom(ctx); }


std::any mathParser::UnaryOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitUnaryOp(this);
  else
    return visitor->visitChildren(this);
}
mathParser::UnaryContext* mathParser::unary() {
  UnaryContext *_localctx = _tracker.createInstance<UnaryContext>(_ctx, getState());
  enterRule(_localctx, 14, mathParser::RuleUnary);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case mathParser::PLUS:
      case mathParser::MINUS:
      case mathParser::BANG: {
        _localctx = _tracker.createInstance<mathParser::UnaryOpContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(62);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 35840) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(63);
        unary();
        break;
      }

      case mathParser::LPAREN:
      case mathParser::LBRACK:
      case mathParser::NUMBER:
      case mathParser::REFERENCE:
      case mathParser::IDENTIFIER: {
        _localctx = _tracker.createInstance<mathParser::UnaryPowerContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(64);
        power();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PowerContext ------------------------------------------------------------------

mathParser::PowerContext::PowerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mathParser::AtomContext* mathParser::PowerContext::atom() {
  return getRuleContext<mathParser::AtomContext>(0);
}

tree::TerminalNode* mathParser::PowerContext::CARET() {
  return getToken(mathParser::CARET, 0);
}

mathParser::UnaryContext* mathParser::PowerContext::unary() {
  return getRuleContext<mathParser::UnaryContext>(0);
}


size_t mathParser::PowerContext::getRuleIndex() const {
  return mathParser::RulePower;
}


std::any mathParser::PowerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitPower(this);
  else
    return visitor->visitChildren(this);
}

mathParser::PowerContext* mathParser::power() {
  PowerContext *_localctx = _tracker.createInstance<PowerContext>(_ctx, getState());
  enterRule(_localctx, 16, mathParser::RulePower);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    atom();
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == mathParser::CARET) {
      setState(68);
      match(mathParser::CARET);
      setState(69);
      unary();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomContext ------------------------------------------------------------------

mathParser::AtomContext::AtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mathParser::AtomContext::getRuleIndex() const {
  return mathParser::RuleAtom;
}

void mathParser::AtomContext::copyFrom(AtomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CallAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::CallAtomContext::IDENTIFIER() {
  return getToken(mathParser::IDENTIFIER, 0);
}

tree::TerminalNode* mathParser::CallAtomContext::LPAREN() {
  return getToken(mathParser::LPAREN, 0);
}

tree::TerminalNode* mathParser::CallAtomContext::RPAREN() {
  return getToken(mathParser::RPAREN, 0);
}

mathParser::ArglistContext* mathParser::CallAtomContext::arglist() {
  return getRuleContext<mathParser::ArglistContext>(0);
}

mathParser::CallAtomContext::CallAtomContext(AtomContext *ctx) { copyFrom(ctx); }


std::any mathParser::CallAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitCallAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdentAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::IdentAtomContext::IDENTIFIER() {
  return getToken(mathParser::IDENTIFIER, 0);
}

mathParser::IdentAtomContext::IdentAtomContext(AtomContext *ctx) { copyFrom(ctx); }


std::any mathParser::IdentAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitIdentAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::ArrayAtomContext::LBRACK() {
  return getToken(mathParser::LBRACK, 0);
}

tree::TerminalNode* mathParser::ArrayAtomContext::RBRACK() {
  return getToken(mathParser::RBRACK, 0);
}

mathParser::ArglistContext* mathParser::ArrayAtomContext::arglist() {
  return getRuleContext<mathParser::ArglistContext>(0);
}

mathParser::ArrayAtomContext::ArrayAtomContext(AtomContext *ctx) { copyFrom(ctx); }


std::any mathParser::ArrayAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitArrayAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::ParenAtomContext::LPAREN() {
  return getToken(mathParser::LPAREN, 0);
}

mathParser::ExprContext* mathParser::ParenAtomContext::expr() {
  return getRuleContext<mathParser::ExprContext>(0);
}

tree::TerminalNode* mathParser::ParenAtomContext::RPAREN() {
  return getToken(mathParser::RPAREN, 0);
}

mathParser::ParenAtomContext::ParenAtomContext(AtomContext *ctx) { copyFrom(ctx); }


std::any mathParser::ParenAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitParenAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::NumberAtomContext::NUMBER() {
  return getToken(mathParser::NUMBER, 0);
}

mathParser::NumberAtomContext::NumberAtomContext(AtomContext *ctx) { copyFrom(ctx); }


std::any mathParser::NumberAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mathVisitor*>(visitor))
    return parserVisitor->visitNumberAtom(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReferenceAtomContext ------------------------------------------------------------------

tree::TerminalNode* mathParser::ReferenceAtomContext::REFERENCE() {
  return getToken(mathParser::REFERENCE, 0);
}

mathParser::ReferenceAtomContext::ReferenceAtomContext(AtomContext *ctx) { copyFrom(ctx); }

